# level1-imageclassification-cv-12

./: .gitignore  README.md  augmentation_test.py  data_download.sh  delete_useless_image.py  pyproject.toml  test.py  train.py
Model_code/: pyproject.toml  train.py
Model_code/configs/data_configs/: data_module.yaml
Model_code/configs/ensemble_configs/: ensemble.yaml  last_ensemble.yaml
Model_code/configs/train_configs/: train_EfficienNetB3.yaml
Model_code/src/plmodules/: base_module.py
StableDiffusion/: Stable_only_text.py
aug/: Augmentation.py  aug1.py  aug2.py
baseline_code/: base_aug_save.ipynb  cutmix_sam_kfold.py  ensemble.py  siamese.py
configs/augmentation_configs/: sketch_augmentation.yaml
configs/data_configs/: sketch_config.yaml
configs/ensemble_configs/: ensemble_continue.yaml
configs/train_configs/: train_EV2.yaml
configs/train_configs/test/: base_test.yaml
configs/train_configs/train/: base_train.yaml
eda/: del_useless_img.py  eda.ipynb  transform_eda.ipynb
model_code/: augmentation.py  ensemble.py  ensemble_auto.py  test.py  train.py
model_code/configs/augmentation_configs/: data_augmentation.yaml
model_code/configs/ensemble_configs/: ensemble.yaml  ensemble_auto.yaml
model_code/configs/sweep_configs/: sweep.yaml
model_code/configs/test_configs/: base_test.yaml
model_code/configs/train_configs/: train_B7.yaml  train_ViTTiny.yaml  train_coAtNet3.yaml  train_module.yaml
model_code/src/data/: Base_datamodule.py
src/data/: Base_datamodule.py  base_datamodule.py
src/models/: BaseModel.py  EfficientNetB1.py  EfficientNetB2.py  EfficientNetB3.py  EfficientNetB4.py  EfficientNetB5.py  SimpleCNN.py  base_model.py  resnet18.py  resnet34.py
src/plmodules/: EfficientNetB3_module.py  ViTTiny_module.py  base_module.py
src/utils/: data_utils.py
stable_diffusion/: Stable_Di_data_balance.py  Stable_Difussion.py  Stable_only_text.py
(+17 files in other folders)
