[tool.poetry]
name = "CV12"
version = "0.1.0"
description = ""
authors = ["CV12 <https://github.com/boostcampaitech7/level1-imageclassification-cv-12.git>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.13"
pytorch-lightning = "^2.4.0"
torch = { version = "^2.4.0", extras = ["cuda12"] }
torchvision = { version = "^0.19.0", extras = ["cuda12"] }
omegaconf = "^2.3.0"
numpy = "^2.1.0"
pandas = "^2.2.2"
pillow = "^10.4.0"
requests = "^2.32.3"
dvc = "^3.54.1"
pytest = "^8.3.2"
torchmetrics = "^1.4.1"
wandb = "^0.17.8"
scikit-learn = "^1.5.1"



[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
